@@ -20,6 +20,7 @@ New features:
 A......... [ZBX-7345] removed deprecated API features (Pavels)
 
 Bug fixes:
+..F....... [ZBX-6350] fixed incorrectly displayed table cell width in Event source details and Event details blocks (Ivo)
 ..F....... [ZBX-7095] fixed dashboard filter name to show pointer cursor (Ivo)
 ..F....... [ZBX-7773] fixed jquery buttonset initializing (Eduard)
 ..F....... [ZBX-7707] fixed "Auto-logout" field to show submitted incorrect value (Ivo)
